--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha1
	- Fixed a problem where config re-gen wouldn't update the current
		version
	- Changed database to fix some user tracking issues
	- Added date to user_vote to allow for sorting by vote date on 
		democratic play
	- Added Label, Catalog # and Language to song extended data table

--------------------------------------------------------------------------
  v.3.3.3 01/26/2007 
	- Updated the SQL file for stable release
	- Fixed an issue with having db album art method always returning
		true and returning a non-array
	- Fixed a race condition with downsampling and transcoding
	- Fixed some refresh issues on the localplay page
	- Fixed a redirect to a blank page if you hit play selected when
		nothing was selected (Thx Chenb)
	- Added detection of old config files, message displayed to admins
		upon login
	- Fixed an issue with WMP11 and Lock Songs that prevented playback
		due to the way Now Playing was being calculated
	- Fixed comment searching, broken when split out into its own
		table
	- Fixed a issue with Catalog builds in Windows 
	- Fixed a bug with admins ability to set the preferences of a 
		specific user
	- Fixed logic on force http that was causing it not to work under
		specific configurations
	- Fixed a flagged and rated item clean issue with catalogs
	- Fixed some minor issues in HttpQ and MPD localplay controllers
  	- Fixed Album Art search on Catalog add so that it only searches
		albums that currently don't have art
  	- Fixed a long outstanding issue with Windows Shared drives and
		the incorrect slashes and speed up catalog builds a tiny
		bit
	- Improve speed, sanity of single album art search